--- a/sass/components/_gameplay.scss
+++ b/sass/components/_gameplay.scss
@@ -5,21 +5,30 @@
   }
   overflow: hidden;
   .overlay{
-    padding: 50px 0;
-    width: 35%;
+    padding: 25px 0;
+    width: 25%;
     display: inline-block;
     background-image: linear-gradient(-180deg, $light-orange 0%, rgba(255,255,255,0) 100%);
     //background-image: radial-gradient(circle at top, $light-orange 60%, rgba(255,255,255,0) 100%);
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -17.5%;
+    margin-left: -12.5%;
     //z-index: 50;
     text-align: center;
     color: $white;
+    i,h2{
+      opacity: 0.5;
+    }
+    i{
+      font-size: 56px;
+    }
+    h2{
+      font-size: 28px;
+    }
     @include breakpoint($xs){
       i{
-          font-size: 56px;
+          font-size: 46px;
       }
       h2{
         font-size: 24px;
@@ -29,7 +38,7 @@
     @include breakpoint($xxs){
       padding: 25px 0;
       i{
-          font-size: 46px;
+          font-size: 36px;
       }
       h2{
         font-size: 18px;
