--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,4 @@
 @import 'components/contact.scss';
 @import 'components/downloads.scss';
 @import 'components/footer.scss';
+@import 'components/media.scss'
